--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -4,8 +4,181 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Find a project</title>
-<link rel="stylesheet" href="css/all.css">
-<link rel="stylesheet" href="css/style.css">
+<style type="text/css">
+	html {
+	box-sizing: border-box;
+	background-color: #cceeff;
+	margin-top: 30px;background: linear-gradient(rgba(141, 153, 174, 0.5), rgba(141, 153, 174, 0.5)),
+              url(../image/melbourne.jpg) no-repeat fixed;
+   background-size: cover;
+   overflow: auto;
+	}
+* {
+      margin: 0;
+      padding: 0;
+    }
+
+
+h2 {
+	font-size: 40px;
+	}
+h3 {
+	margin-bottom: 5px;
+	}
+h4 {
+	margin-bottom: 0px;
+	margin-top: 5px;
+	}
+a {
+  color: white;
+  text-decoration: none;
+	}
+a:hover {
+  text-decoration: none;
+	}
+@media (max-width: 900px) {
+	.bodyContent {margin-bottom: 30%;}
+	.userInfo .home {
+		width: 20;
+		}
+	.userInfo .content {
+		width: 30%;
+		}
+	.userInfo .profile {
+		width: 30%;
+		}
+	}
+	.bodyWrapper {
+	
+	width: 100%;
+	}
+	
+.bodyHeader {
+	background: #2B2D42;
+   color: #8D99AE;
+   position: absolute;
+   top: 0;
+   width: 100%;
+   padding-top: 5px;
+   padding-bottom: 5px;
+	}
+
+.userInfo {
+	background-color: #2B2D42;
+	}
+.userInfo .home {
+	float: left;
+	width: 10%;
+	background-color: inherit;
+	padding-left: 2%;
+	}
+.userInfo .content {
+	width: 10%;
+	float: left;
+	text-align: left;
+	background-color: inherit;
+	}
+.userInfo .profile {
+	width: 76%;
+	float: left;
+	text-align: right;
+	padding-right: 2%;
+	background-color: inherit;
+	}
+
+/*
+bodyContent
+*/
+.bodyContent{
+	
+	text-align: center;	
+	width: 100%;
+	}
+	
+.backImage {
+	
+   padding: 0;
+	height: 100px;	 
+	width: 100%;  
+   }
+
+	
+.bodyContent h2 {
+	}
+	
+.reqQuote a:link{
+	color: white;
+	\\border-radius: 30%;
+   padding: 14px 25px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+	}
+.reqQuote a:hover {
+	background-color: blue;;
+	color: white;
+	}
+	
+#searcMe {
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-right: 10px;
+	padding-left: 10px;
+	border-radius: 20%;
+	margin-bottom: 80px;
+	}
+
+
+	
+.topHit {
+	width: 24%;
+	float: left;
+	padding-right: 1%;
+	padding-left: 25%;
+	text-align: left;
+	color: white;
+	
+	}
+.recentHit {
+	width: 24%;
+	float: right;
+	padding-left: 1%;
+	padding-right: 25%;
+	text-align: left;
+	color: white;
+	}	
+
+/*
+bodyFooter
+*/
+.bodyFooter {
+	position:fixed;
+	bottom: 0;
+	width: 100%;
+	background: #2B2D42;
+   color: #8D99AE;
+   text-align: center;
+ 	padding-top: 20px;
+ 	padding-bottom: 20px;
+   }
+ @media (max-width: 900px) {
+	.bodyContent{
+		margin-bottom: 80%;
+		}
+		.userInfo .home {
+		width: 20;
+		}
+	.userInfo .content {
+		width: 30%;
+		}
+	.userInfo .profile {
+		width: 30%;
+		}
+	.topHit {width: 40%; padding-left: 10px;}
+	.recentHit { width: 40%; padding-right: 10px;}
+	}
+
+</style>
 </head>
 <body>
 	<div class="bodyWrapper">
